--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="imv1">
                 <img src="/imagenes/bebe.svg">
                 <div class="baybe"> Baby’s Hoodie</div>
-                <div class="boton"> Shop Now</div>
+                <div class="boton boton2"> Shop Now</div>
                 
 
             </div>
@@ -260,50 +260,53 @@
 <footer class="inifo">
 
 
-<div>
+<div class="principal">
     <div class="foot1">
-        <div>Circle</div>
-        <div>The eye-catching men’s hoodies from <br>
+        <div class="circl">Circle</div>
+        <div class="hj circlhj circlF">The eye-catching men’s hoodies from <br>
             Farfetch and reference the sports.</div>
-        <div>
+        <div class="hj circlhj">
             3517 W. Gray St. Utica, Pennsylvania<br>
              57867
         </div>
     </div>
     <div class="foot2">
         <div>
-            <div>Discover</div>
-            <div><ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+            <div class=" whiteleter discor">Discover</div>
+            <div><ul class="hj">
+                <li> collection</li>
+                <li>about</li>
+                <li>FAQ</li>
+                <li>contact</li>
             </ul></div>
         </div>
-        <div>Social</div>
-        <div><ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul></div>
+       <div>
+            <div class="whiteleter discor">Social</div>
+            <div><ul class="hj">
+            <li>Facebook</li>
+            <li>Twiter</li>
+            <li>Instagram</li>
+            <li>Linkedin</li>
+            </ul></div>
+         
+        </div>
     </div>
     <div class="foot3">
-        <div>Join Us & Get a Code</div>
-        <div>The eye-catching men’s hoodies from <br>
+        <div class="whiteleter discor">Join Us & Get a Code</div>
+        <div class="hj refer">The eye-catching men’s hoodies from <br>
             Farfetch and reference.</div>
-        <div>
-            <div><p>Email here</p></div>
-            <div><img src="/iconos/Send_fill.svg"></div>
+        <div class="buttox">
+            <div class="here"><p>Email here</p></div>
+            <div class="send"><img src="/iconos/Send_fill.svg"></div>
         </div>
     </div>
 </div>
 <div class="endf">
     <div class="polic">
-        <div>Privacy Policy</div>
-        <div> Terms & Condition</div>
+        <div class="hj">Privacy Policy</div>
+        <div class="hj"> Terms & Condition</div>
     </div>
-    <div>Copy right. all right reserved 2022</div>
+    <div class="hj">Copy right. all right reserved 2022</div>
 </div>
 </footer>
 </body>
