--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h4>Search Product</h4>
             </div>
         
-             <div class="button"><p>Shop Now</p></div>
+             <div class="button">Shop Now</div>
         
         </header>
 
