configurando para responsive

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/styleFirst.css">
     <title>challenge2.0</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
 </head>
 <body>
-    
+   <div class="MetaConteiner">
     <section class="container">
         
         <header class="header ">
@@ -309,6 +310,7 @@
     <div class="hj">Copy right. all right reserved 2022</div>
 </div>
 </footer>
+</div> 
 </body>
 </html>
 
